--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
     "react-test-renderer": "^16.13.1",
+    "redux-logger": "^3.0.6",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
@@ -71,6 +72,7 @@
     "webpack-merge": "^5.0.9"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "cross-env": "^7.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
