--- a/package.json
+++ b/package.json
@@ -74,9 +74,10 @@
   "dependencies": {
     "axios": "^0.20.0",
     "cross-env": "^7.0.2",
-    "lodash": "^4.17.20",
     "formik": "^2.2.1",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
+    "query-string": "^6.13.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
