--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.0",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "styled-components": "^5.1.1",
