SSR add config and simple page

--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "movie-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --open",
-    "build": "cross-env NODE_ENV=production webpack",
-    "lint": "eslint ./src/**/**.js",
+    "start": "cross-env NODE_ENV=development  node ./server",
+    "build": "cross-env NODE_ENV=production webpack --config ./webpack",
+    "lint": "eslint \"**/*.{js,jsx}\"",
     "lint:fix": "eslint ./src/**/**.js --fix",
+    "prod": "cross-env NODE_ENV=production  node ./server",
     "test": "jest --config ./jest.config.js",
     "test:watch": "npm run test --watch",
-    "test:cover": "npm run test --forceExit --detectOpenHandles --coverage --watchAll=false"
+    "test:cover": "npm run test --coverage --watchAll=false"
   },
   "repository": {
     "type": "git",
@@ -72,22 +73,38 @@
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.0.9"
+    "webpack-merge": "^5.0.9",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "mini-css-extract-plugin": "^0.4.0",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.2",
+    "webpack-hot-server-middleware": "^0.5.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@babel/preset-stage-2": "^7.8.3",
+    "@hot-loader/react-dom": "^16.8.6",
     "axios": "^0.20.0",
+    "babel-polyfill": "^6.26.0",
     "cross-env": "^7.0.2",
+    "express": "^4.16.3",
     "formik": "^2.2.1",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "query-string": "^6.13.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hot-loader": "^4.8.4",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.0",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "styled-components": "^5.1.1",
